# AlwaysStrong

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  build.sh  update.json
.github/workflows/: release.yml  upstream-update.yml
module/: action.sh  build_target_txt.sh  common_func.sh  conflict_scan.sh  customize.sh  daemon  description.txt  keybox_fetch.sh  module.prop  pif_fallback_1.prop  pif_fallback_2.prop  pif_native_fetch.sh  post-fs-data.sh  rom_spoof_block.sh  sepolicy.rule  service.sh  status_fetch.sh  sync_patch.sh  uninstall.sh
module/webroot/: index.html
native/asfetch/: Cargo.toml
native/asfetch/prebuilt/arm64-v8a/: asfetch
native/asfetch/prebuilt/armeabi-v7a/: asfetch
native/asfetch/src/: main.rs
native/watcher/: Cargo.toml
native/watcher/prebuilt/arm64-v8a/: aswatcher
native/watcher/prebuilt/armeabi-v7a/: aswatcher
native/watcher/prebuilt/x86/: aswatcher
native/watcher/prebuilt/x86_64/: aswatcher
native/watcher/src/: main.rs
scripts/: build-asfetch.sh  build-watcher.sh  update-upstream.sh
