[package]
name = "asfetch"
version = "1.0.0"
edition = "2021"
description = "AlwaysStrong native HTTPS fetcher — rustls TLS so downloads work on every device without curl/wget (busybox's built-in TLS stalls on some CDNs)"
publish = false

[[bin]]
name = "asfetch"
path = "src/main.rs"

[dependencies]
# minreq + rustls(ring): pure-Rust TLS 1.2/1.3, statically linked, no system
# OpenSSL / no busybox ssl_client. webpki-roots bundles the Mozilla CA set so
# cert validation works on Android without touching /system cacerts.
minreq = { version = "2.11", default-features = false, features = ["https-rustls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false
incremental = false
