[package]
name = "asfetch"
version = "1.0.0"
edition = "2021"
description = "AlwaysStrong native HTTPS fetcher — rustls TLS so downloads work on every device without curl/wget (busybox's built-in TLS stalls on some CDNs)"
publish = false

[[bin]]
name = "asfetch"
path = "src/main.rs"

[dependencies]
# rustls(ring) + webpki-roots: pure-Rust TLS 1.2/1.3, statically linked, no
# system OpenSSL / no busybox ssl_client, Mozilla CA set bundled so cert
# validation works on Android without touching /system cacerts. We drive the
# TCP connect ourselves (IPv4-first) because generic resolvers try IPv6 first
# and hang the whole request on IPv4-only networks that still advertise AAAA.
rustls = "0.21"
webpki-roots = "0.25"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false
incremental = false
